--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style></style>
 </head>
 <body>
+    <div class="list">
     <nav>
         <ul>
             <li><a href="index.html">Обо мне</a></li>
@@ -15,15 +16,26 @@
             <li><a href="index3.html">Работа</a></li>
             <li><a href="index4.html">Развлечения</a></li>
             <li><a href="index5.html">Родной город</a></li>
+            <li><a href="index6.html">Черкануть</a></li>
         </ul>
     </nav>
+    </div>
+    <button class="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
     <h1 class="H">Обо мне</h1>
-    <p class="text">Родился: [22 Января 2008 года в городе "Сасово"]</p>
-    <p class="text">Учился: в [МБОУ СОШ №106] Сейчас учусь в [ОГБПОУ "Рязанский колледж электроники"]</p>
+    <p class="text">Родился: 22 Января 2008 года в городе "Сасово"</p>
+    <p class="text">Учился: в МБОУ СОШ №106.</p>
+    <p class="text">Сейчас учусь в ОГБПОУ "Рязанский колледж электроники"</p>
     <div class="photo-gallery">
         <img src="Фото О СЕБЕ/1.jfif" alt="Фото 1">
         <img src="Фото О СЕБЕ/2.jfif" alt="Фото 2">
         <img src="Фото О СЕБЕ/3.jpg" alt="Фото 3">
+        <img src="Фото О СЕБЕ/4.jpg" alt="Фото 4">
     </div>
+    <br>
+    <p class="RAZRAB">Разработчик_NIKITOS</p>
 </body>
 </html>
