--- a/index3.html
+++ b/index3.html
@@ -8,6 +8,7 @@
     <style></style>
 </head>
 <body>
+    <div class="list">
     <nav>
         <ul>
             <li><a href="index.html">Обо мне</a></li>
@@ -15,16 +16,29 @@
             <li><a href="index3.html">Работа</a></li>
             <li><a href="index4.html">Развлечения</a></li>
             <li><a href="index5.html">Родной город</a></li>
+            <li><a href="index6.html">Черкануть</a></li>
         </ul>
     </nav>
+    </div>
+    <button class="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
     <h1 class="H">Работа</h1>
-    <p class="text">[На данный момент,начиная с 23 января я работаю пешим курьером в сбермаркете]</p>
+    <p class="text">На данный момент,начиная с 23 января я работаю пешим курьером в сбермаркете</p>
+    <p class="text">Так же я работал и буду работать контролером на детских батутах</p>
+    <p class="text">Ну и под конец скажу,что я работал на Сасовской МРБ</p>
+    <p class="text">А еще я получаю денюжку за свой любимый волейбольчик,так как отучился на судью и состою на данный момент в вк "ОРИОН"</p>
     <div class="photo-gallery">
-        <img  src="Фото РАБОТА/1.png" alt="Фото работы 1">
-        <img src="Фото РАБОТА/2.png" alt="Фото работы 2">
+        <img src="Фото РАБОТА/1.png" alt="Фото работы 1">
+        <img src="Фото РАБОТА/2.jpg" alt="Фото работы 2">
         <img src="Фото РАБОТА/3.jpg" alt="Фото работы 3">
+        <img src="Фото РАБОТА/4.jpg" alt="Фото работы 4">
     </div>
     <br><br><br>
     <p class="text">P.S я зарабатываю больше чем все думают,даже сказал бы,что больше чем среднестатистическая з/п в Рязани</p>
+    <br><br>
+    <p class="RAZRAB">Разработчик_NIKITOS</p>
 </body>
 </html>
