--- a/index5.html
+++ b/index5.html
@@ -8,6 +8,7 @@
     <style></style>
 </head>
 <body>
+    <div class="list">
     <nav>
         <ul>
             <li><a href="index.html">Обо мне</a></li>
@@ -15,14 +16,24 @@
             <li><a href="index3.html">Работа</a></li>
             <li><a href="index4.html">Развлечения</a></li>
             <li><a href="index5.html">Родной город</a></li>
+            <li><a href="index6.html">Черкануть</a></li>
         </ul>
     </nav>
+    </div>
+    <button class="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
     <h1 class="H">Родной город</h1>
     <p class="text">Родился я в городе Сасово и я очень люблю это город, так же благодарен за то, что он смог мне дать и дает сейчас </p>
     <div class="photo-gallery">
         <img src="Фото Родной город/1.jpg" alt="Фото 1">
         <img src="Фото Родной город/2.jpg" alt="Фото 2">
         <img src="Фото Родной город/3.jpg" alt="Фото 3">
+        <img src="Фото Родной город/4.jpg" alt="Фото 4">
     </div>
+    <br><br>
+    <p class="RAZRAB">Разработчик_NIKITOS</p>
 </body>
 </html>
