--- a/index6.html
+++ b/index6.html
@@ -25,17 +25,13 @@
         <span></span>
         <span></span>
     </button>
-    <h1 class="H">Развлечения</h1>
-    <p class="text">Мне нравиться сидеть и болтать в дискорде,а так же гомать во всякие игрульки и конечно же гулять </p>
-    <div class="photo-gallery">
-        <img src="Фото Развлечения/1.jpg" alt="Фото 1">
-        <img src="Фото Развлечения/2.png" alt="Фото 2">
-        <img src="Фото Развлечения/3.jpg" alt="Фото 3">
-        <img src="Фото Развлечения/4.jfif" alt="Фото 4">
-        <br><br><br><br><br>
-        <p class="text" > APEX ❤ </p>
-    </div>
-    <br><br>
+    <h1 class="H">Контакты</h1>
+    <p class="text-contacts">Ну что же,раз ты решил(а) написать мне,то держи</p>
+    <a href="https://vk.com/shadow132465"><button class="VK" >Vk</button></a>
+    <a href="https://web.telegram.org/a/@Shadow22222"><button class="Telegram">Tg</button></a>
+    <a href="https://discordapp.com/users/1083828091480187002/"><button class="Discord">Ds</button></a>
+    <a href="https://www.tiktok.com/@shadow_number_2?_t=8nFsKvj4dmy&_r=1"><button class="Tt">Tt</button></a>
+    <br><br><br><br><br><br><br><br><br><br><br>
     <p class="RAZRAB">Разработчик_NIKITOS</p>
 </body>
 </html>
