--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,7 @@
     <style></style>
 </head>
 <body>
+    <div class="list">
     <nav>
         <ul>
             <li><a href="index.html">Обо мне</a></li>
@@ -15,14 +16,24 @@
             <li><a href="index3.html">Работа</a></li>
             <li><a href="index4.html">Развлечения</a></li>
             <li><a href="index5.html">Родной город</a></li>
+            <li><a href="index6.html">Черкануть</a></li>
         </ul>
     </nav>
+    </div>
+    <button class="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
     <h1 class="H">Хобби</h1>
-    <p class="text">[Я профессионально занимаюсь волейболом,даже назвал бы это работой,так как получаю за это деньги,но все таки отнесу это к хобби]</p>
+    <p class="text">Я профессионально занимаюсь волейболом,даже назвал бы это своей жизнью,так как не могу без него </p>
     <div class="photo-gallery">
         <img src="Фото ХОББИ/1.jpg" alt="Фото хобби 1">
         <img src="Фото ХОББИ/2.jpg" alt="Фото хобби 2">
         <img src="Фото ХОББИ/3.jpg" alt="Фото хобби 3">
+        <img src="Фото ХОББИ/4.jpg" alt="Фото хобби 4">
     </div>
+    <br><br>
+    <p class="RAZRAB">Разработчик_NIKITOS</p>
 </body>
 </html>
