--- a/index3.html
+++ b/index3.html
@@ -8,18 +8,16 @@
     <style></style>
 </head>
 <body>
-    <div class="list">
-    <nav>
-        <ul>
-            <li><a href="index.html">Обо мне</a></li>
-            <li><a href="index2.html">Хобби</a></li>
-            <li><a href="index3.html">Работа</a></li>
-            <li><a href="index4.html">Развлечения</a></li>
-            <li><a href="index5.html">Родной город</a></li>
-            <li><a href="index6.html">Черкануть</a></li>
+    <nav class="nav">
+        <ul class="nav-list">
+            <li><a href="index.html" class="nav-link">Обо мне</a></li>
+            <li><a href="index2.html" class="nav-link">Хобби</a></li>
+            <li><a href="index3.html" class="nav-link">Работа</a></li>
+            <li><a href="index4.html" class="nav-link">Досуг</a></li>
+            <li><a href="index5.html" class="nav-link">Родной город</a></li>
+            <li><a href="index6.html" class="nav-link">Черкануть</a></li>
         </ul>
     </nav>
-    </div>
     <button class="burger">
         <span></span>
         <span></span>
@@ -40,5 +38,6 @@
     <p class="text">P.S я зарабатываю больше чем все думают,даже сказал бы,что больше чем среднестатистическая з/п в Рязани</p>
     <br><br>
     <p class="RAZRAB">Разработчик_NIKITOS</p>
+    <script src="script.js"></script>
 </body>
 </html>
