--- a/index5.html
+++ b/index5.html
@@ -8,25 +8,23 @@
     <style></style>
 </head>
 <body>
-    <div class="list">
-    <nav>
-        <ul>
-            <li><a href="index.html">Обо мне</a></li>
-            <li><a href="index2.html">Хобби</a></li>
-            <li><a href="index3.html">Работа</a></li>
-            <li><a href="index4.html">Развлечения</a></li>
-            <li><a href="index5.html">Родной город</a></li>
-            <li><a href="index6.html">Черкануть</a></li>
+    <nav class="nav">
+        <ul class="nav-list">
+            <li><a href="index.html" class="nav-link">Обо мне</a></li>
+            <li><a href="index2.html" class="nav-link">Хобби</a></li>
+            <li><a href="index3.html" class="nav-link">Работа</a></li>
+            <li><a href="index4.html" class="nav-link">Досуг</a></li>
+            <li><a href="index5.html" class="nav-link">Родной город</a></li>
+            <li><a href="index6.html" class="nav-link">Черкануть</a></li>
         </ul>
     </nav>
-    </div>
     <button class="burger">
         <span></span>
         <span></span>
         <span></span>
     </button>
     <h1 class="H">Родной город</h1>
-    <p class="text">Родился я в городе Сасово и я очень люблю это город, так же благодарен за то, что он смог мне дать и дает сейчас </p>
+    <p class="text">Родился я в городе Сасово и я очень люблю этот город, так же благодарен за то, что он смог мне дать и дает сейчас </p>
     <div class="photo-gallery">
         <img src="Фото Родной город/1.jpg" alt="Фото 1">
         <img src="Фото Родной город/2.jpg" alt="Фото 2">
@@ -35,5 +33,6 @@
     </div>
     <br><br>
     <p class="RAZRAB">Разработчик_NIKITOS</p>
+    <script src="script.js"></script>
 </body>
 </html>
