--- a/index6.html
+++ b/index6.html
@@ -8,18 +8,16 @@
     <style></style>
 </head>
 <body>
-    <div class="list">
-    <nav>
-        <ul>
-            <li><a href="index.html">Обо мне</a></li>
-            <li><a href="index2.html">Хобби</a></li>
-            <li><a href="index3.html">Работа</a></li>
-            <li><a href="index4.html">Развлечения</a></li>
-            <li><a href="index5.html">Родной город</a></li>
-            <li><a href="index6.html">Черкануть</a></li>
+    <nav class="nav">
+        <ul class="nav-list">
+            <li><a href="index.html" class="nav-link">Обо мне</a></li>
+            <li><a href="index2.html" class="nav-link">Хобби</a></li>
+            <li><a href="index3.html" class="nav-link">Работа</a></li>
+            <li><a href="index4.html" class="nav-link">Досуг</a></li>
+            <li><a href="index5.html" class="nav-link">Родной город</a></li>
+            <li><a href="index6.html" class="nav-link">Черкануть</a></li>
         </ul>
     </nav>
-    </div>
     <button class="burger">
         <span></span>
         <span></span>
@@ -28,10 +26,11 @@
     <h1 class="H">Контакты</h1>
     <p class="text-contacts">Ну что же,раз ты решил(а) написать мне,то держи</p>
     <a href="https://vk.com/shadow132465"><button class="VK" >Vk</button></a>
-    <a href="https://web.telegram.org/a/@Shadow22222"><button class="Telegram">Tg</button></a>
+    <a href="https://t.me/Shadow22222"><button class="Telegram">Tg</button></a>
     <a href="https://discordapp.com/users/1083828091480187002/"><button class="Discord">Ds</button></a>
     <a href="https://www.tiktok.com/@shadow_number_2?_t=8nFsKvj4dmy&_r=1"><button class="Tt">Tt</button></a>
     <br><br><br><br><br><br><br><br><br><br><br>
     <p class="RAZRAB">Разработчик_NIKITOS</p>
+    <script src="script.js"></script>
 </body>
 </html>
