--- a/index4.html
+++ b/index4.html
@@ -31,7 +31,7 @@
         <img src="Фото Развлечения/3.jpg" alt="Фото 3">
         <img src="Фото Развлечения/4.jfif" alt="Фото 4">
         <br><br><br><br><br>
-        <p class="text" > APEX ❤ </p>
+        <p class="text" >  NIGHT❤ </p>
     </div>
     <br><br>
     <p class="RAZRAB">Разработчик_NIKITOS</p>
