--- a/index3.html
+++ b/index3.html
@@ -24,7 +24,7 @@
         <span></span>
     </button>
     <h1 class="H">Работа</h1>
-    <p class="text">На данный момент,начиная с 23 января я работаю пешим курьером в сбермаркете</p>
+    <p class="text">Начиная с 23 января я работал пешим курьером в сбермаркете</p>
     <p class="text">Так же я работал и буду работать контролером на детских батутах</p>
     <p class="text">Ну и под конец скажу,что я работал на Сасовской МРБ</p>
     <p class="text">А еще я получаю денюжку за свой любимый волейбольчик,так как отучился на судью и состою на данный момент в вк "ОРИОН"</p>
